--- a/src/app/public/pages/nuevo-evento/nuevo-evento.component.html
+++ b/src/app/public/pages/nuevo-evento/nuevo-evento.component.html
@@ -12,7 +12,30 @@
   <div class="content">
 
     <div class="form">
-      <app-nuevo-evento-form></app-nuevo-evento-form>
+      <div class="nuevo-evento-form">
+
+        <div class="nombre-evento" *ngIf="mostrar('nombre')">
+          <app-nombre-evento (siguiente)="onSiguiente($event)"></app-nombre-evento>
+        </div>
+
+        <div class="opciones-evento" *ngIf="mostrar('opciones')">
+          <app-opciones-evento (siguiente)="onSiguiente($event)"></app-opciones-evento>
+        </div>
+
+        <div class="invitados-evento" *ngIf="mostrar('invitados')">
+          <app-invitados-evento (siguiente)="onSiguiente($event)"></app-invitados-evento>
+        </div>
+
+        <div class="config-evento" *ngIf="mostrar('config')">
+          <app-config-evento (siguiente)="onSiguiente($event)"></app-config-evento>
+        </div>
+
+        <div class="confirmacion-evento" *ngIf="mostrar('confirmacion')">
+          <app-confirmacion-evento></app-confirmacion-evento>
+        </div>
+
+      </div>
+
     </div>
 
   </div>
