Navegar a perfil de manera imaninaria

--- a/src/app/public/pages/nuevo-evento/nuevo-evento.component.html
+++ b/src/app/public/pages/nuevo-evento/nuevo-evento.component.html
@@ -5,7 +5,7 @@
       Meeting-o-Matic
     </div>
     <div class="boton">
-      <button> Iniciar sesión </button>
+      <button [routerLink]="['home']"> Iniciar sesión </button>
     </div>
   </nav>
 
@@ -31,7 +31,7 @@
         </div>
 
         <div class="confirmacion-evento" *ngIf="mostrar('confirmacion')">
-          <app-confirmacion-evento></app-confirmacion-evento>
+          <app-confirmacion-evento (siguiente)="onSiguiente($event)"></app-confirmacion-evento>
         </div>
 
       </div>
