--- a/src/app/home/pages/perfil/perfil.component.html
+++ b/src/app/home/pages/perfil/perfil.component.html
@@ -1,1 +1,11 @@
-<p>perfil works!</p>
+<div class="perfil">
+
+  <nav class="navbar">
+    <div class="producto"> </div>
+    <div class="boton">
+      <button [routerLink]="['']"> Cerrar sesión </button>
+    </div>
+  </nav>
+
+  <h2> Tu Perfil </h2>
+</div>
