--- a/src/app/public/components/invitados-evento/invitados-evento.component.html
+++ b/src/app/public/components/invitados-evento/invitados-evento.component.html
@@ -1,5 +1,5 @@
 <div class="invitados-evento">
-  <h2> Ahora agreuemos a los invitados </h2>
+  <h2> Ahora agreguemos a los invitados </h2>
   <button (click)="onAnterior()"> Anterior </button>
   <button (click)="onSiguiente()"> Siguiente </button>
 </div>
