--- a/src/app/public/components/nombre-evento/nombre-evento.component.html
+++ b/src/app/public/components/nombre-evento/nombre-evento.component.html
@@ -1,5 +1,20 @@
 <div class="nombre-evento">
+
   <h2>Empecemos con el nombre</h2>
 
-  <button (click)="onSiguiente()"> Siguiente </button>
+  <mat-form-field appearance="outline">
+    <mat-label>Nombre</mat-label>
+    <input [formControl]="nombre" matInput placeholder="Ejemplo...">
+  </mat-form-field>
+
+  <h2>También podés dejar una descripción</h2>
+
+  <mat-form-field appearance="outline">
+    <mat-label>Descripción</mat-label>
+    <input [formControl]="descripcion" matInput placeholder="Opcional...">
+  </mat-form-field>
+
+  <div class="botones">
+    <button (click)="onSiguiente()"> Siguiente </button>
+  </div>
 </div>
