--- a/src/app/home/pages/perfil/perfil.component.html
+++ b/src/app/home/pages/perfil/perfil.component.html
@@ -3,7 +3,7 @@
   <nav class="navbar">
     <div class="producto"> </div>
     <div class="boton">
-      <button [routerLink]="['']"> Cerrar sesión </button>
+      <button mat-button [routerLink]="['']"> Cerrar sesión </button>
     </div>
   </nav>
 
