--- a/src/app/public/components/confirmacion-evento/confirmacion-evento.component.html
+++ b/src/app/public/components/confirmacion-evento/confirmacion-evento.component.html
@@ -1,5 +1,5 @@
 <div class="confirmacion-evento">
   <h2> ¡Listo! </h2>
 
-  <button (click)="onVolver()"> Volver al inicio </button>
+  <button mat-button (click)="onVolver()"> Volver al inicio </button>
 </div>
