--- a/src/app/public/pages/nuevo-evento/nuevo-evento.component.html
+++ b/src/app/public/pages/nuevo-evento/nuevo-evento.component.html
@@ -5,7 +5,7 @@
       Meeting-o-Matic
     </div>
     <div class="boton">
-      <button [routerLink]="['home']"> Iniciar sesión </button>
+      <button mat-button [routerLink]="['home']"> Iniciar sesión </button>
     </div>
   </nav>
 
