--- a/src/app/public/pages/nuevo-evento/nuevo-evento.component.html
+++ b/src/app/public/pages/nuevo-evento/nuevo-evento.component.html
@@ -9,6 +9,10 @@
     </div>
   </nav>
 
+  <button mat-button (click)="getAll()">
+    agregar
+  </button>
+
   <div class="content">
 
     <div class="form">
