Angular Calendar agregado en Shared Module

--- a/src/app/public/components/opciones-evento/opciones-evento.component.html
+++ b/src/app/public/components/opciones-evento/opciones-evento.component.html
@@ -1,5 +1,8 @@
 <div class="opciones-evento">
   <h2> Calendario </h2>
+
+  <app-calendar></app-calendar>
+
   <button mat-button (click)="onAnterior()"> Anterior </button>
   <button mat-button (click)="onSiguiente()"> Siguiente </button>
 </div>
