Nuevo Evento Component movido a shared module

--- a/src/app/public/pages/nuevo-evento/nuevo-evento.component.html
+++ b/src/app/public/pages/nuevo-evento/nuevo-evento.component.html
@@ -1,47 +1,3 @@
-<div class="nuevo-evento">
-
-  <nav class="navbar">
-    <div class="producto">
-      Meeting-o-Matic
-    </div>
-    <div class="boton">
-      <button mat-button [routerLink]="['home']"> Iniciar sesión </button>
-    </div>
-  </nav>
-
-  <button mat-button (click)="getAll()">
-    agregar
-  </button>
-
-  <div class="content">
-
-    <div class="form">
-      <div class="nuevo-evento-form">
-
-        <div class="nombre-evento" *ngIf="mostrar('nombre')">
-          <app-nombre-evento (siguiente)="onSiguiente($event)"></app-nombre-evento>
-        </div>
-
-        <div class="opciones-evento" *ngIf="mostrar('opciones')">
-          <app-opciones-evento (siguiente)="onSiguiente($event)"></app-opciones-evento>
-        </div>
-
-        <div class="invitados-evento" *ngIf="mostrar('invitados')">
-          <app-invitados-evento (siguiente)="onSiguiente($event)"></app-invitados-evento>
-        </div>
-
-        <div class="config-evento" *ngIf="mostrar('config')">
-          <app-config-evento (siguiente)="onSiguiente($event)"></app-config-evento>
-        </div>
-
-        <div class="confirmacion-evento" *ngIf="mostrar('confirmacion')">
-          <app-confirmacion-evento (siguiente)="onSiguiente($event)"></app-confirmacion-evento>
-        </div>
-
-      </div>
-
-    </div>
-
-  </div>
-
+<div>
+  <app-shared-nuevo-evento></app-shared-nuevo-evento>
 </div>
