--- a/src/app/home/pages/perfil/perfil.component.html
+++ b/src/app/home/pages/perfil/perfil.component.html
@@ -1,9 +1,11 @@
 <div class="perfil">
 
   <nav class="navbar">
-    <div class="producto"> </div>
+    <div class="producto">
+      Meeting-O-Matic
+    </div>
     <div class="boton">
-      <button mat-button [routerLink]="['']"> Cerrar sesión </button>
+      <button mat-button (click)="onCerrarSesion()"> Cerrar sesión </button>
     </div>
   </nav>
 
