--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -3,32 +3,8 @@
     <form class="register-form" [formGroup]="registerForm">
 
         <mat-form-field appearance="outline">
-            <mat-label> Empresa u organización </mat-label>
-            <input matInput formControlName="empresa">
-            <mat-icon matSuffix>person</mat-icon>
-        </mat-form-field>
-
-        <mat-form-field appearance="outline">
-            <mat-label> Domicilio </mat-label>
-            <input matInput formControlName="domicilio">
-            <mat-icon matSuffix>person</mat-icon>
-        </mat-form-field>
-
-        <mat-form-field appearance="outline">
-            <mat-label> Teléfono </mat-label>
-            <input matInput formControlName="telefono">
-            <mat-icon matSuffix>person</mat-icon>
-        </mat-form-field>
-
-        <mat-form-field appearance="outline">
-            <mat-label> Nombre de persona de contacto </mat-label>
-            <input matInput formControlName="nombrePersonaContacto">
-            <mat-icon matSuffix>person</mat-icon>
-        </mat-form-field>
-
-        <mat-form-field appearance="outline">
-            <mat-label> Horarios de atención </mat-label>
-            <input matInput formControlName="horarios">
+            <mat-label> Nombre de usuario </mat-label>
+            <input matInput formControlName="username">
             <mat-icon matSuffix>person</mat-icon>
         </mat-form-field>
 
