Registro básico funcionando

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -5,6 +5,7 @@
         </div>
     </div>
     <div class="login-form-wrapper">
+        <button class="volver-button" mat-button (click)="volver()"> Volver </button>
         <router-outlet></router-outlet>
     </div>
 </div>
