--- a/src/app/shared/components/confirmacion-evento/confirmacion-evento.component.html
+++ b/src/app/shared/components/confirmacion-evento/confirmacion-evento.component.html
@@ -1,5 +1,8 @@
 <div class="confirmacion-evento">
   <h2> ¡Listo! </h2>
 
+  <p (click)="onURLClick()"> URL para el evento </p>
+
+  <p>Acordate que la password es: {{ password }}</p>
   <button mat-button (click)="onVolver()"> Volver al inicio </button>
 </div>
