--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,9 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+.center {
+  text-align: center;
+}
 
 .navbar {
   display: flex;
