--- a/src/app/shared/components/calendar/calendar.component.scss
+++ b/src/app/shared/components/calendar/calendar.component.scss
@@ -3,4 +3,15 @@
   margin-left: 15px;
   max-height: 65vh;
   overflow: auto;
+
+  .button-container {
+    margin-bottom: 15px;
+    display: flex;
+    justify-content: start;
+
+    button {
+      background-color: red;
+      color: white;
+    }
+  }
 }
