--- a/src/app/home/pages/perfil/perfil.component.html
+++ b/src/app/home/pages/perfil/perfil.component.html
@@ -34,7 +34,7 @@
       </div>
     </div>
 
-    <div class="eventos">
+    <div class="eventos" *ngIf="eventos; else cargando">
 
       <mat-card>
         <mat-card-title> Nuevo evento </mat-card-title>
@@ -43,31 +43,23 @@
         </mat-card-actions>
       </mat-card>
 
-      <mat-card>
+      <mat-card *ngFor="let evento of eventos">
         <mat-card-subtitle> Creada el día 23 de octubre </mat-card-subtitle>
-        <mat-card-title> F5 semana que viene </mat-card-title>
+        <mat-card-title> {{ evento.nombre }} </mat-card-title>
         <mat-card-content>
-          <div> 5 invitados </div>
+          <div> {{ evento.invitados.length }} invitados </div>
           <div> 3 días distintos </div>
-          <div> 4 opciones </div>
+          <div> {{ evento.opciones.length }} opciones </div>
           <mat-card-actions>
             <button mat-button> Ver </button>
           </mat-card-actions>
         </mat-card-content>
       </mat-card>
 
-      <mat-card>
-        <mat-card-subtitle> Creada el día 23 de octubre </mat-card-subtitle>
-        <mat-card-title> F5 semana que viene </mat-card-title>
-        <mat-card-content>
-          <div> 5 invitados </div>
-          <div> 3 días distintos </div>
-          <div> 4 opciones </div>
-          <mat-card-actions>
-            <button mat-button> Ver </button>
-          </mat-card-actions>
-        </mat-card-content>
-      </mat-card>
     </div>
   </div>
+
+  <ng-template #cargando>
+    cargando...
+  </ng-template>
 </div>
