--- a/src/app/home/pages/perfil/perfil.component.scss
+++ b/src/app/home/pages/perfil/perfil.component.scss
@@ -14,6 +14,7 @@
       flex-direction: column;
       justify-content: space-around;
       height: 100%;
+      text-align: center;
 
       .sidebar-content {
         height: 70%;
