Avances en perfil

--- a/src/app/home/pages/perfil/perfil.component.scss
+++ b/src/app/home/pages/perfil/perfil.component.scss
@@ -26,6 +26,10 @@
       }
     }
 
+    .mi-evento-container {
+      width: 100%;
+    }
+
     .eventos {
       height: 100%;
       width: 70%;
