--- a/src/app/home/pages/perfil/perfil.component.html
+++ b/src/app/home/pages/perfil/perfil.component.html
@@ -36,25 +36,31 @@
 
     <div class="eventos" *ngIf="eventos; else cargando">
 
-      <mat-card>
-        <mat-card-title> Nuevo evento </mat-card-title>
-        <mat-card-actions>
-          <mat-icon class="add-icon"> add </mat-icon>
-        </mat-card-actions>
-      </mat-card>
-
-      <mat-card *ngFor="let evento of eventos">
-        <mat-card-subtitle> Creada el día 23 de octubre </mat-card-subtitle>
-        <mat-card-title> {{ evento.nombre }} </mat-card-title>
-        <mat-card-content>
-          <div> {{ evento.invitados.length }} invitados </div>
-          <div> 3 días distintos </div>
-          <div> {{ evento.opciones.length }} opciones </div>
+      <div *ngIf="! viendoEvento">
+        <mat-card>
+          <mat-card-title> Nuevo evento </mat-card-title>
           <mat-card-actions>
-            <button mat-button> Ver </button>
+            <mat-icon class="add-icon"> add </mat-icon>
           </mat-card-actions>
-        </mat-card-content>
-      </mat-card>
+        </mat-card>
+
+        <mat-card *ngFor="let evento of eventos">
+          <mat-card-subtitle> Creada el día 23 de octubre </mat-card-subtitle>
+          <mat-card-title> {{ evento.nombre }} </mat-card-title>
+          <mat-card-content>
+            <div> {{ evento.invitados.length }} invitados </div>
+            <div> 3 días distintos </div>
+            <div> {{ evento.opciones.length }} opciones </div>
+            <mat-card-actions>
+              <button mat-button (click)="onVerEvento(evento)"> Ver </button>
+            </mat-card-actions>
+          </mat-card-content>
+        </mat-card>
+      </div>
+
+      <div *ngIf="viendoEvento" class="mi-evento-container">
+        <app-mi-evento-detail [evento]="eventoViendo" (salir)="onSalirDeEvento()"></app-mi-evento-detail>
+      </div>
 
     </div>
   </div>
