navbar component en shared module

--- a/src/app/home/pages/perfil/perfil.component.html
+++ b/src/app/home/pages/perfil/perfil.component.html
@@ -1,13 +1,6 @@
 <div class="perfil">
 
-  <nav class="navbar">
-    <div class="producto">
-      Meeting-O-Matic
-    </div>
-    <div class="boton">
-      <button mat-button (click)="onCerrarSesion()"> Cerrar sesión </button>
-    </div>
-  </nav>
+  <shared-navbar></shared-navbar>
 
   <div class="content">
     <div class="sidebar">
