--- a/src/app/public/pages/resultados-detail/resultados-detail.component.html
+++ b/src/app/public/pages/resultados-detail/resultados-detail.component.html
@@ -1,14 +1,6 @@
 <div class="evento-detail" *ngIf="!loading ; else cargando">
 
-  <nav class="navbar">
-    <div class="producto">
-      Meeting-O-Matic
-    </div>
-    <div class="boton">
-      <button *ngIf="isLoggedIn" mat-button (click)="onCerrarSesion()"> Cerrar sesión </button>
-      <button *ngIf="!isLoggedIn" mat-button (click)="onIniciarSesion()"> Iniciar sesión </button>
-    </div>
-  </nav>
+  <shared-navbar></shared-navbar>
 
   <div *ngIf="evento ; else hayError">
 
