--- a/src/app/shared/components/nuevo-evento/nuevo-evento.component.html
+++ b/src/app/shared/components/nuevo-evento/nuevo-evento.component.html
@@ -1,13 +1,6 @@
 <div class="nuevo-evento">
 
-  <nav class="navbar">
-    <div class="producto">
-      Meeting-o-Matic
-    </div>
-    <div class="boton">
-      <button mat-button [routerLink]="['home']"> Iniciar sesión </button>
-    </div>
-  </nav>
+  <shared-navbar></shared-navbar>
 
   <div class="content">
 
