--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar">
-    <div class="producto">
+    <div class="producto" [routerLink]="['']">
       Meeting-O-Matic
     </div>
     <div class="boton">
