--- a/src/app/home/pages/perfil/perfil.component.scss
+++ b/src/app/home/pages/perfil/perfil.component.scss
@@ -30,21 +30,23 @@
       width: 100%;
     }
 
-    .eventos {
-      height: 100%;
+    .eventos-container {
       width: 70%;
-      padding-left: 10px;
-      padding-right: 10px;
-      display: flex;
-      flex-wrap: wrap;
+      .eventos {
+        height: 100%;
+        padding-left: 10px;
+        padding-right: 10px;
+        display: flex;
+        flex-wrap: wrap;
 
-      .mat-card {
-        margin: 10px;
-        width: 225px;
-        height: 200px;
+        .mat-card {
+          margin: 10px;
+          width: 225px;
+          height: 200px;
 
-        .mat-card-title {
-          text-align: center;
+          .mat-card-title {
+            text-align: center;
+          }
         }
       }
     }
